--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <span><img src="./assets/logo.png" style="width:50px;height:50px;padding-top: 9px; margin-right:9px;"></span>
     <a mat-button routerLink="/customer-list" routerLinkActive="active-link">Customers</a>
     <a mat-button routerLink="/customer-create" routerLinkActive="active-link">Create Customer</a>
+    <a mat-button routerLink="/aboutus" routerLinkActive="active-link">Aboutus</a>
+    <a mat-button routerLink="/contactus" routerLinkActive="active-link">contactus</a>
     <!-- <a mat-button routerLink="/login">Login</a> -->
     <a mat-button routerLink="/login" [style.float]="'right'">
       <mat-icon [color]="'warn'">power_settings_new</mat-icon>
